--- a/src/CtrlMoney.UI.Web/Views/B3/UploadPosition.cshtml
+++ b/src/CtrlMoney.UI.Web/Views/B3/UploadPosition.cshtml
@@ -40,7 +40,7 @@
                             <div class="card-body">
                                 <div class="form-group">
                                     <label for="IdFileDate">Date from position</label>
-                                    <input asp-for="FileName" type="text" class="form-control" id="IdFileDate" placeholder="Calendar Date from position">
+                                    <input asp-for="FileName" type="date" class="form-control" id="IdFileDate" placeholder="Calendar Date from position">
                                 </div>
                                 <div class="form-group">
                                     <label for="exampleInputFile">File input</label>
