--- a/src/CtrlMoney.UI.Web/Views/IncomeTax/_PartialViewStocks.cshtml
+++ b/src/CtrlMoney.UI.Web/Views/IncomeTax/_PartialViewStocks.cshtml
@@ -21,12 +21,26 @@
             @foreach (var item in Model.ResumeBrokerageHistories)
             {
                 <strong><i class="fa-regular fa-calendar-days"></i> @item.Year </strong>
-                foreach (var type in item.TransactionsYears)
-                {
-                    <p class="text-muted">
-                        @string.Format("{0} - {1} {2}",type.TransactionType, type.Quantity, type.TotalValue)
-                    </p>
-                }
+
+                <div class="row">
+                    <div class="col-12 col-sm-6">
+                        @foreach (var type in item.TransactionsYears)
+                        {
+                            <p class="text-muted">
+                                @string.Format("{0} - {1} {2}",type.TransactionType, type.Quantity, type.TotalValue)
+                            </p>
+                        }
+                    </div>
+                    <div class="col-12 col-sm-6">
+                        @foreach (var earning in item.EarningsReport)
+                        {
+                            <p class="text-muted">
+                                @string.Format("{0}: {1}",earning.EventType, earning.TotalValue)
+                            </p>
+                        }
+                    </div>
+                </div>
+
                 <hr />
             }
         </div>
@@ -67,6 +81,23 @@
                 </tr>
             </tfoot>
         </table>
+        <div class="callout callout-success">
+            <div class="row">
+                <div class="col-12 col-sm-6">
+                    <h5>@Model.Quantity - @Model.TicketCode</h5>
+                    <p>@Model.Operation</p>
+                </div>
+                <div class="col-12 col-sm-3">
+                    <h5>Ano EXERCÍCIO</h5>
+                    <p>@Model.TotalYearExercise</p>
+                </div>
+                <div class="col-12 col-sm-3">
+                    <h5>ANO-CALENDÁRIO</h5>
+                    <p>@Model.TotalCalendarYear</p>
+                </div>
+            </div>
+
+        </div>
     </div>
     <!-- /.card -->
 </div>
