Fix layouts and add Index Conversions page

--- a/src/CtrlMoney.UI.Web/Views/IncomeTax/_PartialViewStocks.cshtml
+++ b/src/CtrlMoney.UI.Web/Views/IncomeTax/_PartialViewStocks.cshtml
@@ -102,11 +102,11 @@
                     <p>@Model.Operation</p>
                 </div>
                 <div class="col-12 col-sm-3">
-                    <h5>Ano EXERCÍCIO</h5>
+                    <h5>Ano EXERCÍCIO @Model.YearExercise</h5>
                     <p>@Model.TotalYearExercise</p>
                 </div>
                 <div class="col-12 col-sm-3">
-                    <h5>ANO-CALENDÁRIO</h5>
+                    <h5>ANO-CALENDÁRIO @Model.CalendarYear</h5>
                     <p>@Model.TotalCalendarYear</p>
                 </div>
             </div>
