Add sell and buy operations

--- a/src/CtrlMoney.UI.Web/Views/B3/EditMovementValue.cshtml
+++ b/src/CtrlMoney.UI.Web/Views/B3/EditMovementValue.cshtml
@@ -41,19 +41,19 @@
                 <div class="card-body">
                   <div class="form-group">
                     <label for="idTicketCode">TicketCode</label>
-                    <input type="text" class="form-control" id="idTicketCode" placeholder="TicketCode" disabled="">
+                    <input type="text" class="form-control" id="idTicketCode" placeholder="@Model.TicketCode" disabled="">
                   </div>
                   <div class="form-group">
                     <label for="inputOutput">InputOutput</label>
-                    <input type="text" class="form-control" id="inputOutput" placeholder="input/output" disabled="">
+                    <input type="text" class="form-control" id="inputOutput" placeholder="@Model.InputOutput" disabled="">
                   </div>
                   <div class="form-group">
-                    <label for="idDate">InputOutput</label>
-                    <input type="text" class="form-control" id="idDate" placeholder="Date" disabled="">
+                    <label for="idDate">Date</label>
+                    <input type="text" class="form-control" id="idDate" placeholder="@Model.Date" disabled="">
                   </div>
                   <div class="form-group">
-                    <label for="idMovimentType">InputOutput</label>
-                    <input type="text" class="form-control" id="idMovimentType" placeholder="MovimentType" disabled="">
+                    <label for="idMovimentType">MovimentType</label>
+                    <input type="text" class="form-control" id="idMovimentType" placeholder="@Model.MovimentType" disabled="">
                   </div>
                   <div class="form-group">
                     <label for="idQuantity">Quantity</label>
