--- a/src/CtrlMoney.UI.Web/Views/IncomeTax/Index.cshtml
+++ b/src/CtrlMoney.UI.Web/Views/IncomeTax/Index.cshtml
@@ -41,6 +41,7 @@
                                             <option selected="selected">2022</option>
                                             <option>2021</option>
                                             <option>2020</option>
+                                            <option>2019</option>
                                         </select>
                                     </div>
                                     <!-- /.form-group -->
