--- a/src/CtrlMoney.UI.Web/Views/Shared/_Layout.cshtml
+++ b/src/CtrlMoney.UI.Web/Views/Shared/_Layout.cshtml
@@ -185,10 +185,10 @@ scratch. This page gets rid of all links and provides the needed markup only.
                         <!-- Add icons to the links using the .nav-icon class
                         with font-awesome or any other icon font library -->
                         <li class="nav-item has-treeview menu-open">
-                            <a href="#" class="nav-link active">
+                            <a href="#" class="nav-link">
                                 <i class="nav-icon fas fa-tachometer-alt"></i>
                                 <p>
-                                    B3
+                                    B3 import
                                     <i class="right fas fa-angle-left"></i>
                                 </p>
                             </a>
@@ -208,10 +208,10 @@ scratch. This page gets rid of all links and provides the needed markup only.
                             </ul>
                         </li>
                         <li class="nav-item has-treeview">
-                            <a href="#" class="nav-link">
+                            <a href="#" class="nav-link active">
                                 <i class="nav-icon fas fa-tachometer-alt"></i>
                                 <p>
-                                    Status Invest
+                                    My Ctrl Money
                                     <i class="right fas fa-angle-left"></i>
                                 </p>
                             </a>
