Fix total earnings

--- a/src/CtrlMoney.UI.Web/Views/MyMoney/Index.cshtml
+++ b/src/CtrlMoney.UI.Web/Views/MyMoney/Index.cshtml
@@ -77,10 +77,10 @@
                                         <th>DateInitSet</th>
                                         <th>Dividend</th>
                                         <th>YoC</th>
-                                        <th>BrokeragesAveragePrice</th>
-                                        <th>EarningTotal</th>
+                                        <th>BrokeragesAveragePrice</th>                                       
                                         <th>DividendTotal</th>
                                         <th>JCPTotal</th>
+                                        <th>Total</th>
                                         <th>QuantityStocks</th>
                                         <th>Profit</th>
                                     </tr>
@@ -145,11 +145,6 @@
                     "defaultContent": "<i>BrokeragesAveragePrice</i>",
                 },
                 {
-                    "mData": "EarningTotal",
-                    "bSortable": true,
-                    "defaultContent": "<i>EarningTotal</i>",
-                },
-                {
                     "mData": "DividendTotal",
                     "bSortable": true,
                     "defaultContent": "<i>DividendTotal</i>",
@@ -158,6 +153,11 @@
                     "mData": "JCPTotal",
                     "bSortable": true,
                     "defaultContent": "<i>JCPTotal</i>",
+                },
+                {
+                    "mData": "Total",
+                    "bSortable": true,
+                    "defaultContent": "<i>Total</i>",
                 },
                 {
                     "mData": "QuantityStocks",
